# biorust_lib

./: .gitignore  .justfile  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  pyproject.toml  test.ipynb  test.py  todo.md
biorust-core/: Cargo.toml
biorust-core/proptest-regressions/align/: tests.txt
biorust-core/src/: error.rs  lib.rs  par.rs
biorust-core/src/align/: encode.rs  global_simd.rs  local_simd.rs  matrices.rs  mod.rs  scalar_ref.rs  simd_utils.rs  tests.rs  types.rs
biorust-core/src/alphabets/: dna.rs  mod.rs  protein.rs  rna.rs
biorust-core/src/io/: csv.rs  detect.rs  fasta.rs  fastq.rs  mod.rs
biorust-core/src/phylo/: distance.rs  mod.rs  newick.rs  tests.rs  tree.rs
biorust-core/src/seq/: batch.rs  bytes.rs  dna.rs  feature.rs  gapped_dna.rs  gapped_protein.rs  mod.rs  protein.rs  record.rs  record_batch.rs  rna.rs  traits.rs
biorust-py/: Cargo.toml
biorust-py/src/: align.rs  batch.rs  csv.rs  dna.rs  dna_record.rs  dna_record_batch.rs  fasta.rs  fastq.rs  feature.rs  gapped_dna.rs  gapped_protein.rs  lib.rs  msa.rs  phylo.rs  protein.rs  protein_record.rs  protein_record_batch.rs  report.rs  rna.rs  rna_record.rs  rna_record_batch.rs  seq_shared.rs  (+1 more)
tests/: test_align.py  test_batch.py  test_batch_dna.py  test_batch_protein.py  test_batch_rna.py  test_clustalo.py  test_dna.py  test_dna_record_batch.py  test_fasta.py  test_fastq.py  test_features.py  test_gapped_dna.py  test_gapped_protein.py  test_msa.py  test_phylo.py  test_protein.py  test_read_csv.py  test_record_batch_ops.py  test_rna.py  test_translate.py
(+6 files in other folders)
