[package]
name = "biorust-core"
version = "0.0.1"
edition = "2021"
description = ""

[lib]
name = "biorust_core"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0"
bit-set = "0.8"
vector-map = "1.0.2"
memchr = "2.7.6"
csv = "1.3.0"
wide = "0.7"
rayon = { version = "1.10", optional = true }

[features]
default = ["simd", "parallel"]
simd = []
parallel = ["rayon"]

[dev-dependencies]
proptest = "1.4"
